--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Kaushan+Script&family=Oswald&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa&family=Kaushan+Script&family=Oswald&display=swap");
 
 :root {
   --primary-color: rgb(255, 92, 92);
@@ -40,34 +40,48 @@ section {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding-left: 18px;
+  padding-right: 18px;
 }
 
 h1 {
   font-family: Kaushan Script, sans-serif;
-  font-size: 100px;
+  font-size: 3rem;
   margin-bottom: 0;
 }
 
 h2 {
-  font-size: 32px;
+  font-size: 1.5rem;
   font-weight: normal;
   color: var(--on-background-alt);
 }
 
 /* Navigation */
-nav {
+.menu-content {
   z-index: 10;
   position: fixed;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  gap: 30px;
   font-family: Oswald, sans-serif;
-  font-size: 24px;
+  font-size: 0.8rem;
   letter-spacing: 3px;
   padding: 25px;
   width: 100vw;
   background: rgb(255 255 255 / 50%);
+  opacity: 0;
+}
+
+nav {
+  grid-row: 2;
+}
+
+.is-visible {
+  opacity: 1;
 }
 
 a {
-  margin-right: 25px;
+  margin-right: 10px;
   color: var(--primary-color);
   text-decoration: none;
   border-bottom: 3px solid transparent;
@@ -80,6 +94,76 @@ a:focus {
   border-bottom: 3px solid;
 }
 
+.menu-icon {
+  width: 20px;
+  height: 19px;
+  position: fixed;
+  z-index: 11;
+  top: 30px;
+  left: 25px;
+}
+
+.menu-icon::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 3px;
+  background-color: var(--on-background);
+  transform-origin: 0 0;
+  transition: transform 0.3s ease-out;
+}
+
+.menu-bar {
+  position: absolute;
+  top: 8px;
+  left: 0;
+  width: 20px;
+  height: 3px;
+  background-color: var(--on-background);
+  transition: opacity 0.3s ease-out;
+  transform-origin: 0 50%;
+}
+
+.menu-icon::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 20px;
+  height: 3px;
+  background-color: var(--on-background);
+  transform-origin: 0 100%;
+  transition: transform 0.3s ease-out;
+}
+
+.close-x::before {
+  transform: rotate(45deg) scaleX(1.25);
+}
+
+.close-x .menu-bar {
+  opacity: 0;
+  transform: scaleX(0);
+}
+
+.close-x::after {
+  transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+}
+
+.is-open::before {
+  transform: rotate(45deg) scaleX(1.25);
+}
+
+.is-open .menu-bar {
+  opacity: 0;
+  transform: scaleX(0);
+}
+
+.is-open::after {
+  transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+}
+
 /* Home Section */
 .title-group {
   text-align: center;
@@ -88,27 +172,37 @@ a:focus {
 /* About Section */
 .about-container {
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .image-container {
+  justify-content: center;
   border: 1px solid var(--secondary-color);
   border-radius: 10px;
   padding: 10px 20px;
-  margin-right: 25px;
+  margin: 10px;
   width: auto;
   background: var(--background);
   box-shadow: var(--box-shadow);
 }
 
 img {
-  height: 300px;
-  width: 300px;
+  height: 250px;
+  width: 250px;
 }
 
 /* Projects Section */
 .buttons {
   margin-top: 15px;
   margin-bottom: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+
+.btn-filled {
+  margin-bottom: 10px;
 }
 
 button {
@@ -116,9 +210,8 @@ button {
   height: 40px;
   cursor: pointer;
   border-radius: 10px;
-  margin-right: 10px;
   border: 2px solid var(--primary-color);
-  font-size: 15px;
+  font-size: 0.938rem;
   outline: none;
 }
 
@@ -158,7 +251,7 @@ button:hover:not(.outline) {
 }
 
 .text-box {
-  width: 40%;
+  width: 80%;
   text-align: justify;
   background: rgb(0 0 0 / 50%);
   color: var(--on-primary);
@@ -172,9 +265,14 @@ p {
 }
 
 /* Contact Section */
+.social-icons {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
+
 .fab {
-  font-size: 100px;
-  margin-right: 50px;
+  font-size: 5rem;
   cursor: pointer;
   color: var(--primary-color);
 }
@@ -194,22 +292,23 @@ p {
 }
 
 .theme-switch-wrapper span {
-  margin-right: 10px;
-  font-size: 1rem;
+  margin-right: 4px;
+  font-size: 0.9rem;
 }
 
 .toggle-text {
   position: relative;
-  top: -4px;
+  top: 0px;
   right: 5px;
   color: var(--on-background);
+  opacity: 0;
 }
 
 .theme-switch {
   display: inline-block;
-  height: 34px;
+  height: 25px;
   position: relative;
-  width: 60px;
+  width: 50px;
 }
 
 .theme-switch input {
@@ -231,11 +330,11 @@ p {
   background: #fff;
   bottom: 4px;
   content: "";
-  height: 26px;
+  height: 18px;
   left: 4px;
   position: absolute;
   transition: 0.4s;
-  width: 26px;
+  width: 18px;
 }
 
 input:checked + .slider {
@@ -243,7 +342,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider::before {
-  transform: translateX(26px);
+  transform: translateX(24px);
 }
 
 .slider.round {
@@ -255,6 +354,97 @@ input:checked + .slider::before {
 }
 
 .fas {
-  font-size: 30px;
+  font-size: 1.2rem;
   margin-right: 5px;
+}
+
+@media (min-width: 360px) {
+  nav {
+    font-size: 1rem;
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+
+  .buttons {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .social-icons {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 768px) {
+  .menu-content {
+    display: flex;
+    padding: 25px;
+    opacity: 1;
+  }
+
+  nav {
+    font-size: 1.5rem;
+    letter-spacing: 3px;
+  }
+
+  a {
+    margin-right: 25px;
+  }
+
+  .menu-icon {
+    display: none;
+  }
+
+  h1 {
+    font-size: 6.25rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  img {
+    width: 300px;
+    height: 300px;
+  }
+
+  .text-box {
+    width: 500px;
+  }
+
+  .fab {
+    font-size: 6.25rem;
+    padding-bottom: 10px;
+  }
+
+  .theme-switch-wrapper span {
+    margin-right: 10px;
+    font-size: 1rem;
+  }
+
+  .toggle-text {
+    top: -4px;
+    opacity: 1;
+  }
+
+  .theme-switch {
+    height: 34px;
+    width: 60px;
+  }
+
+  .slider::before {
+    bottom: 4px;
+    height: 26px;
+    left: 4px;
+    width: 26px;
+  }
+
+  input:checked + .slider::before {
+    transform: translateX(26px);
+  }
+
+  .fas {
+    font-size: 2rem;
+  }
 }
